# rengine2-app

./: .gitignore  CMakeLists.txt  culling.rem  materials.rem  scene.rem
cmake/: mingw-w64-x86_64.cmake
shaders/: fragment.glsl  vertex.glsl
src/: SceneLoader.cpp  SceneLoader.h  main.cpp
